Complete professor header card and change font weights

--- a/tcf_website/static/instructor/instructor.css
+++ b/tcf_website/static/instructor/instructor.css
@@ -1,4 +1,9 @@
 .card-header {
   background-color: var(--secondary-color);
   color: white;
+  height: 100%;
+}
+
+small {
+  color: var(--accent-color);
 }
