--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -37,7 +37,7 @@
               <h5 class="card-title display-4">
                   {{ difficulty|floatformat:2 }}
               </h5>
-              <p class="card-text"><i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;Difficulty</p>
+              <p class="card-text"><i class="fa fa-dumbbbell fa-fw"></i>&nbsp;Difficulty</p>
             </div>
         </div>
         {% endif %}
