--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-user fa-fw"></i>&nbsp;{{ review.instructor_rating }}
                 </div>
                 <div class="ml-4 text-muted">
-                    <i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;
+                    <i class="fa fa-dumbbell fa-fw"></i>&nbsp;
                     {{ review.difficulty }}
                 </div>
                 <div class="ml-4 text-muted">
