--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -25,7 +25,7 @@
               </div> 
               <div class="col-4 col-lg-2 text-nowrap">
                 <small class="mb-0 text-muted text-uppercase">
-                  <i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;Difficulty
+                  <i class="fa fa-dumbbell fa-fw"></i>&nbsp;Difficulty
                 </small>
                 <p class="mb-0 info" id="difficulty">
                   {% if difficulty %}
