Complete instructor page

--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -12,7 +12,7 @@
         <div class="card-body">
           <div class="row justify-content-between text-center text-md-left">
               <div class="col-4 col-lg-2 text-nowrap">
-                <small class="mb-0 text-muted text-uppercase">
+                <small class="mb-0 text-uppercase">
                   <i class="fa fa-star fa-fw"></i>&nbsp;Rating
                 </small>
                 <p class="mb-0 info" id="rating">
@@ -24,7 +24,7 @@
                 </p>
               </div> 
               <div class="col-4 col-lg-2 text-nowrap">
-                <small class="mb-0 text-muted text-uppercase">
+                <small class="mb-0 text-uppercase">
                   <i class="fa fa-dumbbell fa-fw"></i>&nbsp;Difficulty
                 </small>
                 <p class="mb-0 info" id="difficulty">
@@ -36,13 +36,13 @@
                 </p>
               </div>
               <div class="col-4 col-lg-2 text-nowrap">
-                <small class="mb-0 text-muted text-uppercase">
+                <small class="mb-0 text-uppercase">
                   <i class="fas fa-chart-bar"></i>&nbsp;GPA
                 </small>
                 <p class="mb-0 info" id="gpa">TODO</p>
               </div>
               <div class="col-12 col-lg-3 offset-lg-3" {% if not last_taught %}style="opacity: 0;"{% endif %}>
-                <small class="mb-0 text-muted text-uppercase">
+                <small class="mb-0 text-uppercase">
                   Last Taught
                 </small>
                   <p class="mb-0 info">{{ last_taught }}</p>
