--- a/tcf_website/static/instructor/instructor.css
+++ b/tcf_website/static/instructor/instructor.css
@@ -4,6 +4,10 @@
   height: 100%;
 }
 
+.course-header:hover {
+  background-color: var(--main-color);
+}
+
 small {
   color: var(--accent-color);
 }
