--- a/tcf_website/templates/instructor/instructor.html
+++ b/tcf_website/templates/instructor/instructor.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container text-left">
+<div class="container">
     <div class="card">
         <div class="row">
             <div class="col">
@@ -79,16 +79,51 @@
         {% for course in dept_data.courses %}
         <div class="card mt-3">
             <a href="{% url 'course' course_id=course.id %}">
-                <div class="card-header py-4">
+                <div class="card-header course-header py-4">
                     {{ course.name }}
                 </div>
             </a>
-            <div class="card-body d-flex justify-content-around">
-                <p><i class="fas fa-star"></i> {{ course.avg_rating }}</p>
-                <p><i class="fas fa-dumbbell"></i> {{ course.avg_difficulty }}</p>
-                <p><i class="fas fa-thumbs-up"></i></p>
-                <p><i class="fas fa-hourglass-half"></i> {{ course.avg_hours }}</p>
-                <p>Last taught {{ course.last_taught }}</p>
+            <div class="card-body">
+                <ul class="row mb-0 px-3">
+                    <li class="col text-nowrap">
+                        <small class="text-uppercase">
+                            <i class="fa fa-star"></i> Rating
+                        </small>
+                        <p class="h4" id="rating">
+                            {{ course.avg_rating }}
+                        </p>
+                    </li>
+                    <li class="col text-nowrap">
+                        <small class="text-uppercase">
+                            <i class="fa fa-dumbbell"></i> Difficulty
+                        </small>
+                        <p class="h4" id="difficulty">
+                            {{ course.avg_difficulty }}
+                        </p>
+                    </li>
+                    <li class="col text-nowrap">
+                        <small class="text-uppercase">
+                            <i class="fa fa-hourglass-half"></i> Hours
+                        </small>
+                        <p class="h4" id="hours">
+                            {{ course.avg_hours }}
+                        </p>
+                    </li>
+                    <li class="col text-nowrap">
+                        <small class="text-uppercase">
+                            <i class="fa fa-chart-bar"></i> GPA
+                        </small>
+                        <p class="h4" id="gpa">
+                            TODO
+                        </p>
+                    </li>
+                    <div class="col">
+                        <small class="text-uppercase">
+                            <i class="fa fa-calendar"></i> Last Taught
+                        </small>
+                        <p class="h4">{{ course.last_taught }}</p>
+                    </div>
+                </ul>
             </div>
         </div>
         {% endfor %}
