--- a/tcf_website/static/base/sidebar.css
+++ b/tcf_website/static/base/sidebar.css
@@ -12,22 +12,23 @@ body {
   background-color: var(--main-color);
   position: fixed;
   z-index: 9999;
-  filter: brightness(75%);
-}
-
-#sidebar-wrapper .sidebar-heading {
-  padding: 0.875rem 1.25rem;
-  font-size: 1.2rem;
+  filter: brightness(85%);
 }
 
 #sidebar-wrapper .list-group {
-  width: 15rem;
+  width: var(--sidebar-width);      /* From base.css */
   margin-top: 2rem;
+}
+
+#sidebar-wrapper .list-group hr {
+  border-color: white;
+  margin-bottom: 0rem;
 }
 
 #sidebar-wrapper .list-group-item, .footer, .footer a {
   background-color: var(--main-color);
   color: var(--background-color);
+  padding-top: 1rem;
 }
 
 #sidebar-wrapper .list-group-item.active,
