--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -8,7 +8,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
     <!-- tCF logo -->
-    <a class="navbar-brand logo-container" href="/">
+    <a class="navbar-brand logo-container mx-auto" href="/">
       <img class="logo" src="{% static 'base/img/new_logo.png' %}">
     </a>
 
