--- a/tcf_website/templates/about/contributors.html
+++ b/tcf_website/templates/about/contributors.html
@@ -1,7 +1,7 @@
 {% block subcontent %}
 {% load static %}
 
-  <div class="tCF-past-contributors text-center">
+  <div class="tCF-past-contributors shown text-center">
 
     <h1 class="my-5">Founders & Alumni</h1>
 
